@@ -1,3 +1,9 @@
+2008-04-07  Murray Cumming  <murrayc@murrayc.com>
+
+	* providers/postgres/libmain.c (plugin_init): Make sure that the 
+	module_path string is freed before being reassigned, though this is 
+	probably not the leak that valgrind is reporting here.
+
 2008-04-06  Vivien Malerba <malerba@gnome-db.org>
 
 	* configure.in:
